--- a/src/app/modules/project/project-create/project-create.component.html
+++ b/src/app/modules/project/project-create/project-create.component.html
@@ -1,24 +1,26 @@
-
-
 <div class="container">
   <div class="row">
-      <div class="col-md-6">
-        <form [formGroup]="projectForm" (ngSubmit)="ngOnSubmit()">
-          <h3>Registreren</h3>
-          <div class="form-group p-2">
-            <input formControlName="name" placeholder="projectnaam">
-          </div>
-          <div class="form-group p-2">
-            <input formControlName="description" placeholder="beschrijving">
-          </div>
-          <div class="form-group p-2">
-            <button type="submit" class="btn btn-primary">Aanmaken</button>
-          </div>
-        </form>
-        <div class="form-group">
-          <p *ngIf="errorMessage.length > 0" class="text-danger">
-                  {{errorMessage}}</p>
-        </div>
+    <div class="col-12">
+      <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
+        {{errorMessage}}
       </div>
+      <form [formGroup]="projectForm" (ngSubmit)="ngOnSubmit()">
+        <h2 class="p-2">Project Aanmaken</h2>
+          <div class="form-group p-2">
+            <label for="name">Naam</label>
+            <input type="text" class="form-control" id="name" formControlName="name" aria-describedby="nameHelp">
+            <small *ngIf="projectForm.controls['name'].hasError('required') && projectForm.controls['name'].touched" id="nameHelp" class="form-text text-danger">Naam is verplicht</small>
+          </div>
+          <div class="form-group p-2">
+            <label for="description">Beschrijving</label>
+            <textarea class="form-control" id="description" formControlName="description" rows="3" aria-describedby="descriptionHelp"></textarea>
+            <small *ngIf="projectForm.controls['description'].hasError('required') && projectForm.controls['description'].touched" id="descriptionHelp" class="form-text text-danger">Beschrijving is
+              verplicht</small>
+          </div>
+          <div class="form-group p-2">
+            <button type="submit" class="btn btn-success" [disabled]="!projectForm.valid">Opslaan</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
