--- a/src/app/modules/sprint/sprint-list/sprint-list.component.html
+++ b/src/app/modules/sprint/sprint-list/sprint-list.component.html
@@ -13,6 +13,7 @@
                     <th scope="col">Omschrijving</th>
                     <th scope="col">Startdatum</th>
                     <th scope="col">Einddatum</th>
+                    <th scope="col" class="d-flex justify-content-end">Acties</th>
                 </tr>
             </thead>
             <tbody id="sprint">
@@ -21,13 +22,13 @@
                     <td>{{ s.description }}</td>
                     <td>{{ s.startdate }}</td>
                     <td>{{ s.enddate }}</td>
-                    <td>
+                    <td class="d-flex justify-content-end">
                         <a [routerLink]="[s.key, s.startdate, s.enddate]" class="btn btn-success d-inline-flex mr-2">
                             Bekijken <span class="material-icons">visibility</span>
                         </a>
-                        <a [routerLink]="['edit', s.key]" class="btn btn-primary d-inline-flex mr-2">
+                        <!-- <a [routerLink]="['edit', s.key]" class="btn btn-primary d-inline-flex mr-2">
                             Bewerken <span class="material-icons">edit</span>
-                        </a>
+                        </a> -->
                     </td>
                 </tr>
             </tbody>
