--- a/src/app/modules/userstory/userstory-create/userstory-create.component.html
+++ b/src/app/modules/userstory/userstory-create/userstory-create.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6">
       <form [formGroup]="userstoryForm" (ngSubmit)="ngOnSubmit()">
-        <h3 class="p-2">userstory aanmaken</h3>
+        <h2 class="p-2">Userstory aanmaken</h2>
         <div class="form-group p-2">
           <label for="name">Projectnaam</label>
           <input type="text" class="form-control" id="name" formControlname="name" aria-describedby="nameHelp">
